package ar.edu.unahur.obj2.ejercicio4;

public interface ChristmasTree {
    String assembly();
}