package ar.edu.unahur.obj2.ejercicio4;

public class PlasticChristmasTree implements ChristmasTree{

    public String assembly() {
        return "Plastic Christmas tree";
    }

}
