package ar.edu.unahur.obj2.ejercicio4;

public class PlasticChristmasTreeWithBubbleLights extends PlasticChristmasTree {

    public String assembly() {
        return super.assembly() + " with Bubble Lights";
    }
    
}
