package ar.edu.unahur.obj2.ejercicio4;

public class PlasticChristmasTreeWithGarland extends PlasticChristmasTree {

    public String assembly() {
        return super.assembly() + " with Garland";
    }

}
