package ar.edu.unahur.obj2.ejercicio4;

public class PlasticChristmasTreeWithGarlandAndBubbleLights extends PlasticChristmasTreeWithGarland {

    public String assembly() {
        return super.assembly() + " with Bubble Lights";
    }

}
