package ar.edu.unahur.obj2.ejercicio4;

public class RealChristmasTree implements ChristmasTree{

    public String assembly() {
        return "Real Christmas tree";
    }

}
