package ar.edu.unahur.obj2.ejercicio4;

public class RealChristmasTreeWithBubbleLights extends RealChristmasTree {

    public String assembly() {
        return super.assembly() + " with Bubble Lights";
    }
    
}
