package ar.edu.unahur.obj2.ejercicio4;

public class RealChristmasTreeWithGarland extends RealChristmasTree {

    public String assembly() {
        return super.assembly() + " with Garland";
    }

}
