package ar.edu.unahur.obj2.ejercicio4;

public class RealChristmasTreeWithGarlandAndBubbleLights extends RealChristmasTreeWithGarland {

    public String assembly() {
        return super.assembly() + " with Bubble Lights";
    }

}
